terraform/prod-infra/alb.tf
# alb.tf

# ── Application Load Balancer ────────────────────────────
resource "aws_lb" "main" {
  name               = "${var.project}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = [for s in aws_subnet.public : s.id]

  enable_deletion_protection = false

  tags = {
    Name      = "${var.project}-alb"
    Project   = var.project
    ManagedBy = "terraform"
  }
}
# ── Target Group ─────────────────────────────────────────
resource "aws_lb_target_group" "app" {
  name        = "${var.project}-tg-app"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "instance"

  health_check {
    enabled             = true
    path                = "/health"
    port                = "traffic-port"
    protocol            = "HTTP"
    healthy_threshold   = 3
    unhealthy_threshold = 3
    interval            = 30
    timeout             = 5
    matcher             = "200"
  }

  tags = {
    Name      = "${var.project}-tg-app"
    Project   = var.project
    ManagedBy = "terraform"
  }
}

# ── Listener ─────────────────────────────────────────────
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app.arn
  }
}
